@@ -4,7 +4,7 @@ default: all
 
 all:\
 UNIT_TESTS/ada_size UNIT_TESTS/ada_size.ali UNIT_TESTS/ada_size.o \
-UNIT_TESTS/c_size UNIT_TESTS/c_size.o ag_dso.o agar-core-ada-conf \
+UNIT_TESTS/c_size UNIT_TESTS/c_size.o ag_dso.o ag_object.o agar-core-ada-conf \
 agar-core-ada-conf.o agar-core-ada.a agar-core-config.ali agar-core-config.o \
 agar-core-datasource.ali agar-core-datasource.o agar-core-dso.ali \
 agar-core-dso.o agar-core-error.ali agar-core-error.o agar-core-event.ali \
@@ -90,9 +90,9 @@ agar-core-config.ali agar-core-datasource.ali agar-core-dso.ali \
 agar-core-error.ali agar-core-event.ali agar-core-limits.ali \
 agar-core-object.ali agar-core-slist.ali agar-core-tail_queue.ali \
 agar-core-threads.ali agar-core-timeout.ali agar-core-types.ali \
-agar-core-version.ali agar-core.ali agar.ali
+agar-core-version.ali agar-core.ali agar.ali agar-core-ada.a
 	./ada-bind UNIT_TESTS/ada_size.ali
-	./ada-link UNIT_TESTS/ada_size UNIT_TESTS/ada_size.ali
+	./ada-link UNIT_TESTS/ada_size UNIT_TESTS/ada_size.ali agar-core-ada.a
 
 UNIT_TESTS/ada_size.ali:\
 ada-compile UNIT_TESTS/ada_size.adb agar-core-datasource.ads agar-core-dso.ads \
@@ -132,6 +132,10 @@ ag_dso.o:\
 cc-compile ag_dso.c
 	./cc-compile ag_dso.c
 
+ag_object.o:\
+cc-compile ag_object.c
+	./cc-compile ag_object.c
+
 agar-core-ada-conf:\
 cc-link agar-core-ada-conf.ld agar-core-ada-conf.o ctxt/ctxt.a
 	./cc-link agar-core-ada-conf agar-core-ada-conf.o ctxt/ctxt.a
@@ -141,14 +145,16 @@ cc-compile agar-core-ada-conf.c ctxt.h _sysinfo.h
 	./cc-compile agar-core-ada-conf.c
 
 agar-core-ada.a:\
-cc-slib agar-core-ada.sld ag_dso.o agar-core-config.o agar-core-datasource.o \
-agar-core-dso.o agar-core-error.o agar-core-event.o agar-core-limits.o \
-agar-core-object.o agar-core-slist.o agar-core-tail_queue.o agar-core-threads.o \
-agar-core-timeout.o agar-core-types.o agar-core-version.o agar-core.o agar.o
-	./cc-slib agar-core-ada ag_dso.o agar-core-config.o agar-core-datasource.o \
-	agar-core-dso.o agar-core-error.o agar-core-event.o agar-core-limits.o \
-	agar-core-object.o agar-core-slist.o agar-core-tail_queue.o agar-core-threads.o \
-	agar-core-timeout.o agar-core-types.o agar-core-version.o agar-core.o agar.o
+cc-slib agar-core-ada.sld ag_dso.o ag_object.o agar-core-config.o \
+agar-core-datasource.o agar-core-dso.o agar-core-error.o agar-core-event.o \
+agar-core-limits.o agar-core-object.o agar-core-slist.o agar-core-tail_queue.o \
+agar-core-threads.o agar-core-timeout.o agar-core-types.o agar-core-version.o \
+agar-core.o agar.o
+	./cc-slib agar-core-ada ag_dso.o ag_object.o agar-core-config.o \
+	agar-core-datasource.o agar-core-dso.o agar-core-error.o agar-core-event.o \
+	agar-core-limits.o agar-core-object.o agar-core-slist.o agar-core-tail_queue.o \
+	agar-core-threads.o agar-core-timeout.o agar-core-types.o agar-core-version.o \
+	agar-core.o agar.o
 
 agar-core-config.ali:\
 ada-compile agar-core-config.adb agar-core-config.ads
@@ -510,7 +516,7 @@ clean-all: sysdeps_clean tests_clean obj_clean ext_clean
 clean: obj_clean
 obj_clean:
 	rm -f UNIT_TESTS/ada_size UNIT_TESTS/ada_size.ali UNIT_TESTS/ada_size.o \
-	UNIT_TESTS/c_size UNIT_TESTS/c_size.o ag_dso.o agar-core-ada-conf \
+	UNIT_TESTS/c_size UNIT_TESTS/c_size.o ag_dso.o ag_object.o agar-core-ada-conf \
 	agar-core-ada-conf.o agar-core-ada.a agar-core-config.ali agar-core-config.o \
 	agar-core-datasource.ali agar-core-datasource.o agar-core-dso.ali \
 	agar-core-dso.o agar-core-error.ali agar-core-error.o agar-core-event.ali \
@@ -524,11 +530,11 @@ obj_clean:
 	chk-limits.o chk-lockdebug chk-lockdebug.o chk-off_t chk-off_t.o chk-threads \
 	chk-threads.o ctxt/bindir.c ctxt/bindir.o ctxt/ctxt.a ctxt/dlibdir.c \
 	ctxt/dlibdir.o ctxt/incdir.c ctxt/incdir.o ctxt/repos.c ctxt/repos.o \
-	ctxt/slibdir.c ctxt/slibdir.o
-	rm -f ctxt/version.c ctxt/version.o deinstaller deinstaller.o inst-check \
-	inst-check.o inst-copy inst-copy.o inst-dir inst-dir.o inst-link inst-link.o \
-	install_core.o install_error.o installer installer.o instchk instchk.o \
-	insthier.o
+	ctxt/slibdir.c
+	rm -f ctxt/slibdir.o ctxt/version.c ctxt/version.o deinstaller deinstaller.o \
+	inst-check inst-check.o inst-copy inst-copy.o inst-dir inst-dir.o inst-link \
+	inst-link.o install_core.o install_error.o installer installer.o instchk \
+	instchk.o insthier.o
 ext_clean:
 	rm -f conf-adatype conf-cctype conf-ldtype conf-sosuffix conf-systype mk-ctxt
 
