@@ -14,3 +14,4 @@ ada_size.ali
 ../agar-core-version.ali
 ../agar-core.ali
 ../agar.ali
+../agar-core-ada.a
